# krproject

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  README  README.md  acinclude.m4  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac  kr_config.h  kr_config.h.in  krengine.pc.in  libtool
dbs/: Makefile.am  Makefile.in  dbs_basopr.c  dbs_basopr.h  rapodbc.c  t_dbs101_datasrc_def_cur.c  t_dbs101_datasrc_def_cur.cfg  t_dbs102_datasrc_index_cur.c  t_dbs102_datasrc_index_cur.cfg  t_dbs103_datasrc_field_cur.c  t_dbs104_datasrc_field_cnt_sel.c  t_dbs104_datasrc_field_cnt_sel.cfg  t_dbs105_datasrc_field_def_sel.c  t_dbs201_set_def_sel.c  t_dbs202_set_cfg_cur.c  t_dbs301_sdi_cur.c  t_dbs301_sdi_cur.cfg  t_dbs302_ddi_cur.c  t_dbs302_ddi_cur.cfg  t_dbs303_hdi_cur.c  t_dbs303_hdi_cur.cfg  t_dbs304_hdi_day_sel.c  t_dbs305_hdi_mon_sel.c  t_dbs306_hdi_flag_sel.c  t_dbs401_rule_cur.c
krcalc/: Makefile.am  Makefile.in  kr_calc.c  kr_calc.h  kr_calc_dumper.c  kr_calc_dumper.h  kr_calc_dumper_flex.c  kr_calc_dumper_flex.h  kr_calc_dumper_json.c  kr_calc_dumper_json.h  kr_calc_lexer.c  kr_calc_lexer_flex.c  kr_calc_lexer_flex.l  kr_calc_parser.c  kr_calc_parser.h  kr_calc_parser_bison.c  kr_calc_parser_bison.y  kr_calc_parser_flex.c  kr_calc_parser_flex.h  kr_calc_parser_flex.l  kr_calc_parser_flex.y  kr_calc_parser_gwt.c  kr_calc_parser_gwt.h  kr_calc_parser_json.c  kr_calc_parser_json.h  kr_calc_tree.c  kr_calc_tree.h
krchannel/: Makefile.am  Makefile.in  kr_channel.c  kr_channel.h  kr_protocol.c  kr_protocol.h  kr_transport.c  kr_transport.h
krcoordi/: Makefile.am  Makefile.in  kr_coordi.c  kr_coordi.h  kr_coordi_config.c  kr_coordi_handle.c  kr_coordi_handler.c  kr_message.c
krdata/: Makefile.am  Makefile.in  kr_context.c  kr_context.h  kr_data.c  kr_data.h  kr_data_api.c  kr_data_api.h  kr_data_calc.c  kr_data_ddi.c  kr_data_ddi.h  kr_data_ddi_calc.c  kr_data_hdi.c  kr_data_hdi.h  kr_data_hdi_cache.c  kr_data_hdi_calc.c  kr_data_item.c  kr_data_item.h  kr_data_item_ddi.c  kr_data_item_ddi.h  kr_data_item_hdi.c  kr_data_item_hdi.h  kr_data_item_hdi_cache.c  kr_data_item_hdi_cache.h  kr_data_item_hdi_day.c  kr_data_item_hdi_flag.c  kr_data_item_hdi_mon.c  kr_data_item_sdi.c  kr_data_item_sdi.h  kr_data_item_set.c  kr_data_item_set.h  kr_data_sdi.c  kr_data_sdi.h  kr_data_sdi_calc.c  kr_data_set.c  kr_data_set.h  kr_data_set_calc.c  kr_data_temp.c  kr_data_temp.h  kr_ddi.c  (+8 more)
krdb/: Makefile.am  Makefile.in  kr_db.c  kr_db.h  kr_db_api.c  kr_db_api.h  kr_db_define.c  kr_db_define.h  kr_db_external.c  kr_db_external.h  kr_db_interface.c  kr_db_interface.h  kr_db_internal.c  kr_db_internal.h  kr_db_kernal.c  kr_db_kernal.h  kr_db_kernel.c  kr_db_kernel.h  kr_db_mmap.c  kr_db_mmap.h  kr_db_persist.c  kr_db_persist.h  krdb.c  krdb.h  krdb_interface.c  krdb_interface.h  krdb_wrapper.c  krdb_wrapper.h
krengine/: Makefile.am  Makefile.in  kr_engine.c  kr_engine.h  kr_engine_context.c  kr_engine_context.h  kr_engine_ctx.c  kr_engine_ctx.h  kr_engine_detect.c  kr_engine_env.c  kr_engine_env.h  kr_engine_handle.c  kr_engine_message.c  kr_engine_thread.c  kr_group.c  kr_group_func.c  kr_message.c  kr_message.h  kr_rule.c  kr_rule_func.c
krflow/: Makefile.am  Makefile.in  kr_flow.c  kr_flow.h  kr_flow_api.c  kr_flow_api.h  kr_flow_group.c  kr_flow_group.h  kr_flow_rule.c  kr_flow_rule.h
kriface/: Makefile.am  Makefile.in  kr_iface.c  kr_iface.h  kr_iface_avro.c  kr_iface_fixed.c  kr_iface_input.c  kr_iface_input.h  kr_iface_output.c
krinput/: Makefile.am  Makefile.in  kr_input.c  kr_input.h  kr_input_define.c  kr_input_define.h  kr_input_handle.c  kr_input_handle.h  kr_record.c  kr_record.h
krio/: Makefile.am  Makefile.in  kr_io.c  kr_io.h  kr_io_input.c  kr_io_output.c  kr_io_output.h
kroutput/: Makefile.am  Makefile.in  kr_output.c  kr_output.h  kr_output_define.c  kr_output_define.h  kr_output_handle.c  kr_output_handle.h
krparam/: Makefile.am  Makefile.in  kr_dym.c  kr_dym.h  kr_dym_ddi.c  kr_dym_ddi.h  kr_dym_group.c  kr_dym_group.h  kr_dym_hdi.c  kr_dym_hdi.h  kr_dym_rule.c  kr_dym_rule.h  kr_dym_sdi.c  kr_dym_sdi.h  kr_dym_set.c  kr_dym_set.h  kr_param.c  kr_param.h  kr_param_api.c  kr_param_api.h  kr_param_class.c  kr_param_class.h  kr_param_class_ddi.c  kr_param_class_ddi.h  kr_param_class_hdi.c  kr_param_class_hdi.h  kr_param_class_index.c  kr_param_class_index.h  kr_param_class_input.c  kr_param_class_input.h  kr_param_class_output.c  kr_param_class_output.h  kr_param_class_sdi.c  kr_param_class_sdi.h  kr_param_class_set.c  kr_param_class_set.h  kr_param_class_table.c  kr_param_class_table.h  kr_param_ddi.c  kr_param_ddi.h  (+28 more)
krrule/: Makefile.am  Makefile.in  kr_aid.c  kr_aid.h  kr_context.c  kr_context.h  kr_ddi.c  kr_ddi.h  kr_ddi_func.c  kr_ddi_func.h  kr_dynamicmem.c  kr_dynamicmem.h  kr_group.c  kr_group.h  kr_group_func.c  kr_group_func.h  kr_hdi.c  kr_hdi.h  kr_hdi_cache.c  kr_hdi_cache.h  kr_hdi_func.c  kr_hdi_func.h  kr_rule.c  kr_rule.h  kr_rule_func.c  kr_rule_func.h  kr_sdi.c  kr_sdi.h  kr_sdi_func.c  kr_sdi_func.h
krrules/: Makefile.am  Makefile.in  kr_dict.c  kr_dict.h  kr_lexer.c  kr_parser.c  kr_parser.h  kr_regex.c  kr_regex.h  kr_rules.c  kr_rules.h  kr_ruletree.c  kr_ruletree.h
krserver/: Makefile.am  Makefile.in  kr_message.c  kr_server.c  kr_server.h  kr_server_config.c  kr_server_config.h  kr_server_coordi.c  kr_server_handle.c  kr_server_handler.c  kr_server_message.c  kr_server_message.h  kr_server_network.c  kr_server_network.h  kr_server_protocol.c  kr_server_protocol.h
krshm/: Makefile.am  Makefile.in  kr_shm.c  kr_shm.h  kr_shm_ddi.c  kr_shm_ddi.h  kr_shm_group.c  kr_shm_group.h  kr_shm_hdi.c  kr_shm_hdi.h  kr_shm_rule.c  kr_shm_rule.h  kr_shm_sdi.c  kr_shm_sdi.h  krshm.c
krtests/: Makefile.am  Makefile.in  kr_alloc_test.c  kr_cache_test.c  kr_calc_test.c  kr_cfgparser_test.c  kr_data_test.c  kr_datetime_test.c  kr_db_test.c  kr_list_test.c  kr_log_test.c  kr_queue_test.c  kr_rule_test.c  kr_string_test.c  kr_threadpool_test.c  test_krrules_calc.c  test_krutils_zmalloc.c
krtools/: Makefile.am  Makefile.in  kr_iface.c  (+4 more)
(+284 files in other folders)
