ACLOCAL_AMFLAGS = -I m4

SUBDIRS  = dbs krutils krcalc krparam krdb krdata krflow krengine \
		   krchannel krserver krcoordi krtools \
		   tests examples etc doc 

SUBDIRS += krclient krshell krweb

AM_CPPFLAGS = -g -I$(includedir) -L$(libdir)

include_HEADERS = kr_config.h

EXTRA_DIST = README 

