lib_LTLIBRARIES        = libkrcalc.la
libkrcalc_la_SOURCES  = \
     kr_calc_lexer.c    \
     kr_calc_parser.c   \
     kr_calc_parser.h   \
     kr_calc_tree.c \
     kr_calc_tree.h \
     kr_calc.c \
     kr_calc.h 
     
libkrcalc_la_LIBADD    = $(top_srcdir)/krutils/libkrutils.la
libkrcalc_la_LDFLAGS   =
libkrcalc_la_CPPFLAGS  =

EXTRA_DIST = parser
