bin_PROGRAMS       = krcoordi
krcoordi_SOURCES   = kr_coordi.h \
                     kr_coordi.c \
                     kr_coordi_handler.c \
                     kr_coordi_config.c 
     
krcoordi_LDADD     = $(top_srcdir)/krutils/libkrutils.la
krcoordi_LDADD    += $(top_srcdir)/dbs/libdbs.la
krcoordi_LDADD    += $(top_srcdir)/krshm/libkrshm.la
krcoordi_LDADD    += $(top_srcdir)/krcalc/libkrcalc.la
krcoordi_LDADD    += $(top_srcdir)/krdb/libkrdb.la
krcoordi_LDADD    += $(top_srcdir)/krrule/libkrrule.la
krcoordi_LDFLAGS    = 
krcoordi_CPPFLAGS   = 
