bin_PROGRAMS       = krcoordi
krcoordi_SOURCES   = kr_coordi.h \
                     kr_coordi.c \
                     ../krserver/kr_message.h \
                     ../krserver/kr_message.c \
                     kr_coordi_handler.c \
                     kr_coordi_config.c 
     
krcoordi_LDADD     = $(top_srcdir)/krutils/libkrutils.la
krcoordi_LDFLAGS    = 
krcoordi_CPPFLAGS   = 
