noinst_LTLIBRARIES     = libkrdata.la
libkrdata_la_SOURCES   = \
						 kr_data.h \
						 kr_data.c \
						 kr_context.h \
						 kr_context.c \
						 kr_set.c \
						 kr_sdi.c \
						 kr_sdi_func.c \
						 kr_ddi.c \
						 kr_ddi_func.c \
						 kr_hdi.c \
						 kr_hdi_func.c \
						 kr_hdi_cache.h \
						 kr_hdi_cache.c 

#libkrdata_la_LIBADD    = $(top_srcdir)/krutils/libkrutils.la
#libkrdata_la_LIBADD   += $(top_srcdir)/dbs/dbs/libdbsdbs.la
#libkrdata_la_LIBADD   += $(top_srcdir)/krparam/libkrparam.la
#libkrdata_la_LIBADD   += $(top_srcdir)/krcalc/libkrcalc.la
#libkrdata_la_LIBADD   += $(top_srcdir)/krdb/libkrdb.la
libkrdata_la_LDFLAGS   = 
libkrdata_la_CPPFLAGS  = 
