noinst_LTLIBRARIES     = libkrdata.la
libkrdata_la_SOURCES   = kr_data.h \
						 kr_data.c \
						 kr_data_calc.c \
						 kr_data_set.h \
						 kr_data_set.c \
						 kr_data_set_calc.c \
						 kr_data_sdi.h \
						 kr_data_sdi.c \
						 kr_data_sdi_calc.c \
						 kr_data_ddi.h \
						 kr_data_ddi.c \
						 kr_data_ddi_calc.c \
						 kr_data_hdi.h \
						 kr_data_hdi.c \
						 kr_data_hdi_calc.c \
						 kr_data_hdi_cache.h \
						 kr_data_hdi_cache.c \
						 kr_data_api.h \
						 kr_data_api.c 

#libkrdata_la_LIBADD    = $(top_srcdir)/krutils/libkrutils.la
#libkrdata_la_LIBADD   += $(top_srcdir)/dbs/dbs/libdbsdbs.la
#libkrdata_la_LIBADD   += $(top_srcdir)/krparam/libkrparam.la
#libkrdata_la_LIBADD   += $(top_srcdir)/krcalc/libkrcalc.la
#libkrdata_la_LIBADD   += $(top_srcdir)/krdb/libkrdb.la
libkrdata_la_LDFLAGS   = 
libkrdata_la_CPPFLAGS  = 
