noinst_LTLIBRARIES     = libkrdata.la
libkrdata_la_SOURCES   = kr_data.h \
						 kr_data.c \
						 kr_data_item.h \
						 kr_data_item.c \
						 kr_data_item_set.h \
						 kr_data_item_set.c \
						 kr_data_item_sdi.h \
						 kr_data_item_sdi.c \
						 kr_data_item_ddi.h \
						 kr_data_item_ddi.c \
						 kr_data_item_hdi.h \
						 kr_data_item_hdi.c \
						 kr_data_item_hdi_flag.c \
						 kr_data_item_hdi_day.c \
						 kr_data_item_hdi_mon.c \
						 kr_data_item_hdi_cache.h \
						 kr_data_item_hdi_cache.c 

#libkrdata_la_LIBADD    = $(top_srcdir)/krutils/libkrutils.la
#libkrdata_la_LIBADD   += $(top_srcdir)/dbs/dbs/libdbsdbs.la
#libkrdata_la_LIBADD   += $(top_srcdir)/krparam/libkrparam.la
#libkrdata_la_LIBADD   += $(top_srcdir)/krcalc/libkrcalc.la
#libkrdata_la_LIBADD   += $(top_srcdir)/krdb/libkrdb.la
libkrdata_la_LDFLAGS   = 
libkrdata_la_CPPFLAGS  = 
