noinst_LTLIBRARIES   = libkrdb.la
libkrdb_la_SOURCES   = kr_db.h \
					   kr_db.c \
					   kr_db_define.h \
					   kr_db_define.c \
					   kr_db_internal.h \
					   kr_db_internal.c \
					   kr_db_external.h \
					   kr_db_external.c \
					   kr_db_api.h \
					   kr_db_api.c 

#libkrdb_la_LIBADD    = $(top_srcdir)/krutils/libkrutils.la
#libkrdb_la_LIBADD   += $(top_srcdir)/dbs/dbs/libdbsdbs.la
libkrdb_la_LDFLAGS   = 
libkrdb_la_CPPFLAGS  = 
