noinst_LTLIBRARIES   = libkrdb.la
libkrdb_la_SOURCES   = kr_db.h \
					   kr_db.c \
					   kr_db_kernal.h \
					   kr_db_kernal.c \
					   kr_db_persist.h \
					   kr_db_persist.c 

#libkrdb_la_LIBADD   += $(top_srcdir)/dbs/dbs/libdbsdbs.la
#libkrdb_la_LIBADD    = $(top_srcdir)/krutils/libkrutils.la
#libkrdb_la_LIBADD    = $(top_srcdir)/krparam/libkrparam.la
libkrdb_la_LDFLAGS   = 
libkrdb_la_CPPFLAGS  = 
