noinst_LTLIBRARIES     = libkrflow.la
libkrflow_la_SOURCES   = kr_flow.h

libkrflow_la_LIBADD    = $(top_srcdir)/krutils/libkrutils.la
libkrflow_la_LIBADD   += $(top_srcdir)/dbs/dbs/libdbsdbs.la
libkrflow_la_LIBADD   += $(top_srcdir)/krcalc/libkrcalc.la
libkrflow_la_LIBADD   += $(top_srcdir)/krdata/libkrdata.la
libkrflow_la_LDFLAGS   = 
libkrflow_la_CPPFLAGS  = 
