noinst_LTLIBRARIES     = libkrflow.la
libkrflow_la_SOURCES   = kr_flow.h \
						 kr_flow.c \
						 kr_flow_group.h \
						 kr_flow_group.c \
						 kr_flow_rule.h \
						 kr_flow_rule.c \
						 kr_flow_api.h \
						 kr_flow_api.c 

#libkrflow_la_LIBADD    = $(top_srcdir)/krutils/libkrutils.la
#libkrflow_la_LIBADD   += $(top_srcdir)/dbs/dbs/libdbsdbs.la
#libkrflow_la_LIBADD   += $(top_srcdir)/krparam/libkrparam.la
#libkrflow_la_LIBADD   += $(top_srcdir)/krcalc/libkrcalc.la
#libkrflow_la_LIBADD   += $(top_srcdir)/krdb/libkrdb.la
#libkrflow_la_LIBADD   += $(top_srcdir)/krdata/libkrdata.la
libkrflow_la_LDFLAGS   = 
libkrflow_la_CPPFLAGS  = 
