noinst_LTLIBRARIES = libkriface.la
libkriface_la_SOURCES    =  kr_iface.h \
							kr_iface.c \
							kr_iface_input.h \
							kr_iface_input.c \
							kr_iface_output.h \
							kr_iface_output.c 
     
#libkriface_la_LIBADD    = $(top_srcdir)/krutils/libkrutils.la
#libkriface_la_LIBADD   += $(top_srcdir)/dbs/libdbsbas.la
#libkriface_la_LIBADD   += $(top_srcdir)/dbs/dbs/libdbsdbs.la
#libkriface_la_LIBADD   += $(top_srcdir)/krcalc/libkrcalc.la
#libkriface_la_LIBADD   += $(top_srcdir)/krparam/libkrparam.la
#libkriface_la_LIBADD   += $(top_srcdir)/krdb/libkrdb.la
#libkriface_la_LIBADD   += $(top_srcdir)/krdata/libkrdata.la
libkriface_la_LDFLAGS    = 
libkriface_la_CPPFLAGS   = 

