noinst_LTLIBRARIES = libkrinput.la
libkrinput_la_SOURCES    =  kr_input.h \
							kr_input.c \
							kr_record.h \
							kr_record.c \
							kr_input_define.h \
							kr_input_define.c \
							kr_input_handle.h \
							kr_input_handle.c 
     
#libkrinput_la_LIBADD    = $(top_srcdir)/krutils/libkrutils.la
#libkrinput_la_LIBADD   += $(top_srcdir)/dbs/libdbsbas.la
#libkrinput_la_LIBADD   += $(top_srcdir)/dbs/dbs/libdbsdbs.la
#libkrinput_la_LIBADD   += $(top_srcdir)/krparam/libkrparam.la
libkrinput_la_LDFLAGS    = 
libkrinput_la_CPPFLAGS   = 

