noinst_LTLIBRARIES = libkrio.la
libkrio_la_SOURCES    =  kr_io.h \
                         kr_io.c \
                         kr_io_input.h \
                         kr_io_input.c \
                         kr_io_output.h \
                         kr_io_output.c 
     
#libkrio_la_LIBADD    = $(top_srcdir)/krutils/libkrutils.la
#libkrio_la_LIBADD   += $(top_srcdir)/dbs/libdbsbas.la
#libkrio_la_LIBADD   += $(top_srcdir)/dbs/dbs/libdbsdbs.la
#libkrio_la_LIBADD   += $(top_srcdir)/krcalc/libkrcalc.la
#libkrio_la_LIBADD   += $(top_srcdir)/krparam/libkrparam.la
#libkrio_la_LIBADD   += $(top_srcdir)/krdb/libkrdb.la
#libkrio_la_LIBADD   += $(top_srcdir)/krdata/libkrdata.la
libkrio_la_LDFLAGS    = 
libkrio_la_CPPFLAGS   = 

