noinst_LTLIBRARIES = libkroutput.la
libkroutput_la_SOURCES    =  kr_output.h \
							 kr_output.c 
     
#libkroutput_la_LIBADD    = $(top_srcdir)/krutils/libkrutils.la
#libkroutput_la_LIBADD   += $(top_srcdir)/dbs/libdbsbas.la
#libkroutput_la_LIBADD   += $(top_srcdir)/dbs/dbs/libdbsdbs.la
#libkroutput_la_LIBADD   += $(top_srcdir)/krcalc/libkrcalc.la
#libkroutput_la_LIBADD   += $(top_srcdir)/krparam/libkrparam.la
#libkroutput_la_LIBADD   += $(top_srcdir)/krdb/libkrdb.la
#libkroutput_la_LIBADD   += $(top_srcdir)/krdata/libkrdata.la
libkroutput_la_LDFLAGS    = 
libkroutput_la_CPPFLAGS   = 

