noinst_LTLIBRARIES      = libkrparam.la
libkrparam_la_SOURCES   = \
						 kr_param.h      \
						 kr_shm_set.h    \
						 kr_shm_set.c    \
						 kr_shm_sdi.h    \
						 kr_shm_sdi.c    \
						 kr_shm_ddi.h    \
						 kr_shm_ddi.c    \
						 kr_shm_hdi.h    \
						 kr_shm_hdi.c    \
						 kr_shm_rule.h   \
						 kr_shm_rule.c   \
						 kr_shm_group.h  \
						 kr_shm_group.c  \
						 kr_shm.h        \
						 kr_shm.c        \
						 kr_dym_set.h    \
						 kr_dym_set.c    \
						 kr_dym_sdi.h    \
						 kr_dym_sdi.c    \
						 kr_dym_ddi.h    \
						 kr_dym_ddi.c    \
						 kr_dym_hdi.h    \
						 kr_dym_hdi.c    \
						 kr_dym_rule.h   \
						 kr_dym_rule.c   \
						 kr_dym_group.h  \
						 kr_dym_group.c  \
						 kr_dym.h        \
						 kr_dym.c        
     
#libkrparam_la_LIBADD    = $(top_srcdir)/krutils/libkrutils.la
#libkrparam_la_LIBADD   += $(top_srcdir)/dbs/dbs/libdbsdbs.la
#libkrparam_la_LIBADD   += $(top_srcdir)/krcalc/libkrcalc.la
libkrparam_la_LDFLAGS   = 
libkrparam_la_CPPFLAGS  = 


