noinst_LTLIBRARIES     = libkrparam.la
libkrparam_la_SOURCES  = kr_param.h      \
						 kr_param.c      \
						 kr_param_set.h    \
						 kr_param_set.c    \
						 kr_param_sdi.h    \
						 kr_param_sdi.c    \
						 kr_param_ddi.h    \
						 kr_param_ddi.c    \
						 kr_param_hdi.h    \
						 kr_param_hdi.c    \
						 kr_param_rule.h   \
						 kr_param_rule.c   \
						 kr_param_group.h  \
						 kr_param_group.c  \
						 kr_param_api.h  \
						 kr_param_api.c  
     
#libkrparam_la_LIBADD    = $(top_srcdir)/krutils/libkrutils.la
#libkrparam_la_LIBADD   += $(top_srcdir)/dbs/dbs/libdbsdbs.la
#libkrparam_la_LIBADD   += $(top_srcdir)/krcalc/libkrcalc.la
libkrparam_la_LDFLAGS   = 
libkrparam_la_CPPFLAGS  = 


