noinst_LTLIBRARIES     = libkrparam.la
libkrparam_la_SOURCES  = kr_param.h      \
						 kr_param.c      \
						 kr_param_persist.h \
						 kr_param_persist.c \
						 kr_param_persist_odbc.c \
						 kr_param_persist_file.c \
						 kr_param_class.h \
						 kr_param_class.c \
						 kr_param_class_input.h  \
						 kr_param_class_input.c  \
						 kr_param_class_output.h   \
						 kr_param_class_output.c   \
						 kr_param_class_index.h  \
						 kr_param_class_index.c  \
						 kr_param_class_set.h    \
						 kr_param_class_set.c    \
						 kr_param_class_sdi.h    \
						 kr_param_class_sdi.c    \
						 kr_param_class_ddi.h    \
						 kr_param_class_ddi.c    \
						 kr_param_class_hdi.h    \
						 kr_param_class_hdi.c    
     
#libkrparam_la_LIBADD    = $(top_srcdir)/krutils/libkrutils.la
#libkrparam_la_LIBADD   += $(top_srcdir)/dbs/dbs/libdbsdbs.la
#libkrparam_la_LIBADD   += $(top_srcdir)/krcalc/libkrcalc.la
libkrparam_la_LDFLAGS   = 
libkrparam_la_CPPFLAGS  = 


