lib_LTLIBRARIES        = libkrrule.la
libkrrule_la_SOURCES  = \
     kr_context.h \
     kr_context.c \
	 kr_aid.h \
	 kr_aid.c \
	 kr_sdi.h \
	 kr_sdi.c \
	 kr_sdi_func.h \
	 kr_sdi_func.c \
	 kr_ddi.h \
	 kr_ddi.c \
	 kr_ddi_func.h \
	 kr_ddi_func.c \
	 kr_hdi.h \
	 kr_hdi.c \
	 kr_hdi_func.h \
	 kr_hdi_func.c \
	 kr_hdi_cache.h \
	 kr_hdi_cache.c \
     kr_rule.h \
     kr_rule.c \
     kr_dynamicmem.h \
     kr_dynamicmem.c 

     
libkrrule_la_LIBADD    = $(top_srcdir)/krutils/libkrutils.la
libkrrule_la_LIBADD   += $(top_srcdir)/dbs/dbs/libdbsdbs.la
libkrrule_la_LIBADD   += $(top_srcdir)/krshm/libkrshm.la
libkrrule_la_LIBADD   += $(top_srcdir)/krcalc/libkrcalc.la
libkrrule_la_LIBADD   += $(top_srcdir)/krdb/libkrdb.la
libkrrule_la_LDFLAGS   = 
libkrrule_la_CPPFLAGS  = 
