bin_PROGRAMS       = krserver
krserver_SOURCES   = kr_server.h \
                     kr_server.c \
                     kr_server_config.h \
                     kr_server_config.c \
                     kr_server_protocol.h \
                     kr_server_protocol.c \
                     kr_server_network.h \
                     kr_server_network.c \
                     kr_server_handle.c 
     
krserver_LDADD     = $(top_srcdir)/krengine/libkrengine.la
krserver_LDFLAGS   = 
krserver_CPPFLAGS  = 

