lib_LTLIBRARIES       = libkrshm.la
libkrshm_la_SOURCES   = \
						 kr_shm.h        \
						 kr_shm.c        \
						 kr_shm_sdi.h    \
						 kr_shm_sdi.c    \
						 kr_shm_ddi.h    \
						 kr_shm_ddi.c    \
						 kr_shm_hdi.h    \
						 kr_shm_hdi.c    \
						 kr_shm_rule.h   \
						 kr_shm_rule.c   \
						 kr_shm_group.h  \
						 kr_shm_group.c
     
libkrshm_la_LIBADD    = $(top_srcdir)/krutils/libkrutils.la
libkrshm_la_LIBADD   += $(top_srcdir)/dbs/dbs/libdbsdbs.la
libkrshm_la_LDFLAGS   = 
libkrshm_la_CPPFLAGS  = 


