bin_PROGRAMS      = kriface
kriface_SOURCES   = kr_iface.h \
					kr_iface.c \
					kr_iface_fixed.c \
					kr_iface_json.c \
					kr_iface_avro.c
     
kriface_LDADD     = $(top_srcdir)/krutils/libkrutils.la
kriface_LDADD    += $(top_srcdir)/dbs/libdbsbas.la
kriface_LDADD    += $(top_srcdir)/dbs/dbs/libdbsdbs.la
kriface_LDFLAGS   = 
kriface_CPPFLAGS  = 

