noinst_LTLIBRARIES      = libkrutils.la
libkrutils_la_SOURCES   = \
						  kr_macros.h \
						  kr_types.h \
						  kr_endian.h \
						  kr_alloc.h \
						  kr_alloc.c \
						  kr_datetime.h \
						  kr_datetime.c \
						  kr_string.h \
						  kr_string.c \
						  kr_log.h \
						  kr_log.c \
						  kr_list.h \
						  kr_list.c \
						  kr_ntree.h \
						  kr_ntree.c \
						  kr_hashtable.h \
						  kr_hashtable.c \
						  kr_hashset.h \
						  kr_hashset.c \
						  kr_functable.h \
						  kr_functable.c \
						  kr_regex.h \
						  kr_regex.c \
						  kr_json.h \
						  kr_json.c \
						  kr_module.h \
						  kr_module.c \
						  kr_skiplist.h \
						  kr_skiplist.c \
						  kr_conhash.h \
						  kr_conhash.c \
						  kr_queue.h \
						  kr_queue.c \
						  kr_threadpool.h \
						  kr_threadpool.c \
						  kr_net.h \
						  kr_net.c \
						  kr_event.h \
						  kr_event.c \
						  kr_cache.h \
						  kr_cache.c \
						  kr_utils.h

EXTRA_DIST = \
			 kr_event_epoll.c \
			 kr_event_kqueue.c \
			 kr_event_select.c



libkrutils_la_LIBADD    = 
libkrutils_la_LDFLAGS   = -lpthread -ldl -lm
libkrutils_la_CPPFLAGS  = 
