TEST_PROGS                      = 

noinst_PROGRAMS                 = $(TEST_PROGS)
progs_ldadd                     = $(top_srcdir)/krengine/libkrengine.la

TEST_PROGS                     += kr_alloc_test
kr_alloc_test_SOURCES           = kr_alloc_test.c
kr_alloc_test_LDADD             = $(progs_ldadd)
kr_alloc_test_CPPFLAGS          = -g 

TEST_PROGS                     += kr_string_test
kr_string_test_SOURCES          = kr_string_test.c
kr_string_test_LDADD            = $(progs_ldadd)
kr_string_test_CPPFLAGS         = -g 

TEST_PROGS                     += kr_datetime_test
kr_datetime_test_SOURCES        = kr_datetime_test.c
kr_datetime_test_LDADD          = $(progs_ldadd)
kr_datetime_test_CPPFLAGS       = -g 

TEST_PROGS                     += kr_log_test
kr_log_test_SOURCES             = kr_log_test.c
kr_log_test_LDADD               = $(progs_ldadd)
kr_log_test_CPPFLAGS            = -g -I$(top_srcdir)/src

TEST_PROGS                     += kr_list_test
kr_list_test_SOURCES            = kr_list_test.c
kr_list_test_LDADD              = $(progs_ldadd)
kr_list_test_CPPFLAGS           = -g 

TEST_PROGS                     += kr_hashtable_test
kr_hashtable_test_SOURCES       = kr_hashtable_test.c
kr_hashtable_test_LDADD         = $(progs_ldadd)
kr_hashtable_test_CPPFLAGS      = -g 

TEST_PROGS                     += kr_queue_test
kr_queue_test_SOURCES           = kr_queue_test.c
kr_queue_test_LDADD             = $(progs_ldadd)
kr_queue_test_CPPFLAGS          = -g 

TEST_PROGS                     += kr_threadpool_test
kr_threadpool_test_SOURCES      = kr_threadpool_test.c
kr_threadpool_test_LDADD        = $(progs_ldadd)
kr_threadpool_test_CPPFLAGS     = -g 

TEST_PROGS                     += kr_skiplist_test
kr_skiplist_test_SOURCES        = kr_skiplist_test.c
kr_skiplist_test_LDADD          = $(progs_ldadd)
kr_skiplist_test_CPPFLAGS       = -g 

TEST_PROGS                     += kr_conhash_test
kr_conhash_test_SOURCES         = kr_conhash_test.c
kr_conhash_test_LDADD           = $(progs_ldadd)
kr_conhash_test_CPPFLAGS        = -g 

TEST_PROGS                     += kr_cache_test
kr_cache_test_SOURCES           = kr_cache_test.c
kr_cache_test_LDADD             = $(progs_ldadd)
kr_cache_test_CPPFLAGS          = -g 

TEST_PROGS                     += kr_param_test
kr_param_test_SOURCES           = kr_param_test.c
kr_param_test_LDADD             = $(progs_ldadd)
kr_param_test_CPPFLAGS          = -g 

TEST_PROGS                     += kr_calc_test
kr_calc_test_SOURCES            = kr_calc_test.c
kr_calc_test_LDADD              = $(progs_ldadd)
kr_calc_test_CPPFLAGS           = -g 

TEST_PROGS                     += kr_odbc_test
kr_odbc_test_SOURCES            = kr_odbc_test.c
kr_odbc_test_LDADD              = $(progs_ldadd)
kr_odbc_test_CPPFLAGS           = -g 

TEST_PROGS                     += kr_db_test
kr_db_test_SOURCES              = kr_db_test.c
kr_db_test_LDADD                = $(progs_ldadd)
kr_db_test_CPPFLAGS             = -g 

TEST_PROGS                     += kr_data_test
kr_data_test_SOURCES            = kr_data_test.c
kr_data_test_LDADD              = $(progs_ldadd)
kr_data_test_CPPFLAGS           = -g 

